feat(App.vue):上传文件夹可显示相对路径
增加了一个handleFileDrop2函数

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "hash-wasm": "^4.9.0",
     "vue": "^3.3.4"
   },
   "devDependencies": {
